<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cardview_dark_background"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".movieDiary.MainActivity"
    android:gravity="center_horizontal">

    <TextView android:text="@string/choose_menu_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/header_margin"
        android:paddingRight="@dimen/header_margin"
        android:paddingLeft="@dimen/header_margin"
        android:paddingBottom="@dimen/header_bottom_margin"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/cardview_light_background"
        android:gravity="clip_horizontal" />

    <Button
        android:id="@+id/button_add_diary_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_diary_entry"/>

    <Button
        android:id="@+id/button_edit_diary_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_diary_entry"/>

    <Button
        android:id="@+id/button_delete_diary_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_diary_entry"/>

    <Button
        android:id="@+id/button_view_diary_entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_diary_entries"/>
</LinearLayout>